using UnityEngine;

namespace Event {
	[CreateAssetMenu(fileName = "Solution", menuName = "GGJ20/Solution")]
	public class Solution : ScriptableObject {
		public Sprite sprite;
	}
}